welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:4: error: ';' expected but ')' found.
    nbBscuits = nbBiscuits + 1)
                              ^Poucet:5: error: Missing closing brace `}' assumed here
 do {
 ^